src/fileFormats/stl/STLAsciiParseRagel.cc

#line 1 "STLAsciiParseRagel.rl"
/*--------------------------------*- C++ -*----------------------------------*\
  =========                 |
  \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox
   \\    /   O peration     |
    \\  /    A nd           | www.openansys.com
     \\/     M anipulation  |
-------------------------------------------------------------------------------
    Copyright (C) 2018-2023 OpenCFD Ltd.
-------------------------------------------------------------------------------
License
    This file is part of OpenFOAM.

    OpenFOAM is free software: you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    OpenFOAM is distributed in the hope that it will be useful, but WITHOUT
    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.

    You should have received a copy of the GNU General Public License
    along with OpenFOAM.  If not, see <http://www.gnu.org/licenses/>.

Description
    Ragel-based parsing of STL ASCII format.
    The goto-based finite state machine (FSM) is generated with

        ragel -G2 -o STLAsciiParseRagel.cc STLAsciiParseRagel.rl

\*---------------------------------------------------------------------------*/

#include "STLAsciiParse.H"
#include "STLReader.H"

#pragma GCC diagnostic ignored "-Wimplicit-fallthrough"
#pragma GCC diagnostic ignored "-Wunused-const-variable"

// https://en.wikipedia.org/wiki/STL_%28file_format%29#ASCII_STL
//
// Format
//
// solid [name]
//
// * where name is an optional string.
// * The file continues with any number of triangles,
//   each represented as follows:
//
// [color ...]
// facet normal ni nj nk
//     outer loop
//         vertex v1x v1y v1z
//         vertex v2x v2y v2z
//         vertex v3x v3y v3z
//     endloop
// endfacet
//
// * where each n or v is a floating-point number.
// * The file concludes with
//
// endsolid [name]

// We take some parsing shortcuts.
// - Ignore 'color' lines
// - Only look for initial 'facet '. Ignore 'normal ...'
// - Ignore name for 'endsolid'
//
// ------------------------------------------------------------------------- //

// Ragel machine definition
// Ragel variables (p, pe, eof, cs, top, stack, ts, te, act) defined later...
//
// Can use 'variable p xxx;' etc to change these names


// Define the machine actions

#line 107 "STLAsciiParseRagel.rl"




#line 150 "STLAsciiParseRagel.rl"



//
// FSM globals
//


#line 96 "STLAsciiParseRagel.cc"
static const int stlAscii_start = 1;
static const int stlAscii_error = 0;

static const int stlAscii_en_main = 1;


#line 158 "STLAsciiParseRagel.rl"


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

namespace Foam
{
namespace Detail
{

//- A lexer for parsing STL ASCII files.
//  Returns DynamicList(s) of points and facets (zoneIds).
//  The facets are within a solid/endsolid grouping
class STLAsciiParseRagel
:
    public Detail::STLAsciiParse
{
    //- Error handling
    void die(const char *what, const char *parsing, const char *pe) const;

public:

    //- From input stream, with the estimated number of triangles in the STL
    STLAsciiParseRagel(const label nTrisEstimated)
    :
        Detail::STLAsciiParse(nTrisEstimated)
    {}

    //- Execute lexer
    void execute(std::istream& is);
};

} // End namespace Detail
} // End namespace Foam


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

// Length of the input read buffer
#define INBUFLEN 16384

void Foam::Detail::STLAsciiParseRagel::execute(std::istream& is)
{
    if (!is)
    {
        return;
    }

    // cs = code state
    int cs;

    // Initialize FSM variables
    
#line 156 "STLAsciiParseRagel.cc"
	{
	cs = stlAscii_start;
	}

#line 209 "STLAsciiParseRagel.rl"
   /* ^^^ FSM initialization here ^^^ */;

    // Local token start
    char *tok = nullptr;

    // Buffering
    char inbuf[INBUFLEN];
    std::streamsize pending = 0;

    // Line-oriented processing loop (as per Ragel pdf example)

    while (is)
    {
        if (pending >= INBUFLEN)
        {
            // We overfilled the buffer while trying to scan a token...
            FatalErrorInFunction
                << "buffer full while scanning near line " << lineNum_ << nl;
            break;
        }

        char *data = inbuf + pending;   // current data buffer
        const std::streamsize buflen = INBUFLEN - pending; // space in buffer

        is.read(data, buflen);
        const std::streamsize gcount = is.gcount();
        if (gcount <= 0)
        {
            break;
        }

        // p,pe = Ragel parsing point, parsing end (default naming)
        // eof  = Ragel EOF point (default naming)

        char *p = inbuf;
        const char *pe = data + gcount;
        const char *eof = nullptr;
        if (!is)
        {
            eof = pe;   // Tag 'pe' as being the EOF for the FSM as well
        }

        // Line-oriented: search backwards to find last newline
        {
            --pe;
            while (*pe != '\n' && pe >= inbuf)
            {
                --pe;
            }
            ++pe;
        }

        
#line 215 "STLAsciiParseRagel.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr2:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 229 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 10: goto tr2;
		case 32: goto st1;
		case 83: goto st2;
		case 115: goto st2;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st1;
	goto tr0;
tr0:
#line 99 "STLAsciiParseRagel.rl"
	{ die("solid", p, pe); }
	goto st0;
tr12:
#line 99 "STLAsciiParseRagel.rl"
	{ die("solid", p, pe); }
#line 101 "STLAsciiParseRagel.rl"
	{ die("facet", p, pe); }
#line 100 "STLAsciiParseRagel.rl"
	{ die("endsolid", p, pe); }
	goto st0;
tr17:
#line 101 "STLAsciiParseRagel.rl"
	{ die("facet", p, pe); }
#line 100 "STLAsciiParseRagel.rl"
	{ die("endsolid", p, pe); }
	goto st0;
tr30:
#line 100 "STLAsciiParseRagel.rl"
	{ die("endsolid", p, pe); }
	goto st0;
tr39:
#line 101 "STLAsciiParseRagel.rl"
	{ die("facet", p, pe); }
	goto st0;
tr49:
#line 101 "STLAsciiParseRagel.rl"
	{ die("facet", p, pe); }
#line 103 "STLAsciiParseRagel.rl"
	{ die("loop", p, pe); }
	goto st0;
tr52:
#line 103 "STLAsciiParseRagel.rl"
	{ die("loop", p, pe); }
	goto st0;
tr65:
#line 103 "STLAsciiParseRagel.rl"
	{ die("loop", p, pe); }
#line 105 "STLAsciiParseRagel.rl"
	{ die("vertex", p, pe); }
	goto st0;
tr68:
#line 105 "STLAsciiParseRagel.rl"
	{ die("vertex", p, pe); }
	goto st0;
tr184:
#line 105 "STLAsciiParseRagel.rl"
	{ die("vertex", p, pe); }
#line 104 "STLAsciiParseRagel.rl"
	{ die("endloop", p, pe); }
	goto st0;
tr187:
#line 104 "STLAsciiParseRagel.rl"
	{ die("endloop", p, pe); }
	goto st0;
tr197:
#line 104 "STLAsciiParseRagel.rl"
	{ die("endloop", p, pe); }
#line 102 "STLAsciiParseRagel.rl"
	{ die("endfacet", p, pe); }
	goto st0;
tr200:
#line 102 "STLAsciiParseRagel.rl"
	{ die("endfacet", p, pe); }
	goto st0;
tr214:
#line 101 "STLAsciiParseRagel.rl"
	{ die("facet", p, pe); }
#line 102 "STLAsciiParseRagel.rl"
	{ die("endfacet", p, pe); }
#line 100 "STLAsciiParseRagel.rl"
	{ die("endsolid", p, pe); }
	goto st0;
tr233:
#line 99 "STLAsciiParseRagel.rl"
	{ die("solid", p, pe); }
#line 100 "STLAsciiParseRagel.rl"
	{ die("endsolid", p, pe); }
	goto st0;
#line 319 "STLAsciiParseRagel.cc"
st0:
cs = 0;
	goto _out;
tr235:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 331 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 79: goto st3;
		case 111: goto st3;
	}
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 76: goto st4;
		case 108: goto st4;
	}
	goto tr0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 73: goto st5;
		case 105: goto st5;
	}
	goto tr0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 68: goto st6;
		case 100: goto st6;
	}
	goto tr0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	switch( (*p) ) {
		case 9: goto tr8;
		case 10: goto tr9;
		case 32: goto tr8;
	}
	if ( 12 <= (*p) && (*p) <= 13 )
		goto tr8;
	goto tr0;
tr8:
#line 82 "STLAsciiParseRagel.rl"
	{ tok = p; /* Local token start */ }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 384 "STLAsciiParseRagel.cc"
	if ( (*p) == 10 )
		goto tr11;
	goto st7;
tr9:
#line 82 "STLAsciiParseRagel.rl"
	{ tok = p; /* Local token start */ }
#line 84 "STLAsciiParseRagel.rl"
	{ beginSolid(word::validate(tok, p)); }
	goto st8;
tr11:
#line 84 "STLAsciiParseRagel.rl"
	{ beginSolid(word::validate(tok, p)); }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 402 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 32: goto tr13;
		case 67: goto tr14;
		case 69: goto tr15;
		case 70: goto tr16;
		case 99: goto tr14;
		case 101: goto tr15;
		case 102: goto tr16;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr13;
	goto tr12;
tr13:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 423 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 10: goto tr13;
		case 32: goto st9;
		case 67: goto st10;
		case 69: goto st17;
		case 70: goto st25;
		case 99: goto st10;
		case 101: goto st17;
		case 102: goto st25;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st9;
	goto tr17;
tr14:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 445 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 79: goto st11;
		case 111: goto st11;
	}
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 76: goto st12;
		case 108: goto st12;
	}
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 79: goto st13;
		case 111: goto st13;
	}
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case 82: goto st14;
		case 114: goto st14;
	}
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 10 )
		goto st15;
	goto st14;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 32: goto tr28;
		case 69: goto tr15;
		case 70: goto tr16;
		case 101: goto tr15;
		case 102: goto tr16;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr28;
	goto tr17;
tr28:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 507 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 10: goto tr28;
		case 32: goto st16;
		case 69: goto st17;
		case 70: goto st25;
		case 101: goto st17;
		case 102: goto st25;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st16;
	goto tr17;
tr15:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 527 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 78: goto st18;
		case 110: goto st18;
	}
	goto tr30;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 68: goto st19;
		case 100: goto st19;
	}
	goto tr30;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case 83: goto st20;
		case 115: goto st20;
	}
	goto tr30;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 79: goto st21;
		case 111: goto st21;
	}
	goto tr30;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 76: goto st22;
		case 108: goto st22;
	}
	goto tr30;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 73: goto st23;
		case 105: goto st23;
	}
	goto tr30;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 68: goto st24;
		case 100: goto st24;
	}
	goto tr30;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 10 )
		goto st164;
	goto st24;
st164:
	if ( ++p == pe )
		goto _test_eof164;
case 164:
	switch( (*p) ) {
		case 32: goto tr234;
		case 83: goto tr235;
		case 115: goto tr235;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr234;
	goto tr233;
tr234:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st165;
st165:
	if ( ++p == pe )
		goto _test_eof165;
case 165:
#line 614 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 10: goto tr234;
		case 32: goto st165;
		case 83: goto st2;
		case 115: goto st2;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st165;
	goto tr0;
tr16:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 632 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 65: goto st26;
		case 97: goto st26;
	}
	goto tr39;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 67: goto st27;
		case 99: goto st27;
	}
	goto tr39;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 69: goto st28;
		case 101: goto st28;
	}
	goto tr39;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 84: goto st29;
		case 116: goto st29;
	}
	goto tr39;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 9: goto st30;
		case 32: goto st30;
	}
	if ( 12 <= (*p) && (*p) <= 13 )
		goto st30;
	goto tr39;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 10 )
		goto tr46;
	goto tr45;
tr45:
#line 85 "STLAsciiParseRagel.rl"
	{ beginFacet(); }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 691 "STLAsciiParseRagel.cc"
	if ( (*p) == 10 )
		goto st32;
	goto st31;
tr46:
#line 85 "STLAsciiParseRagel.rl"
	{ beginFacet(); }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 703 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 32: goto tr50;
		case 79: goto tr51;
		case 111: goto tr51;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr50;
	goto tr49;
tr50:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 720 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 10: goto tr50;
		case 32: goto st33;
		case 79: goto st34;
		case 111: goto st34;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st33;
	goto tr52;
tr51:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 738 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 85: goto st35;
		case 117: goto st35;
	}
	goto tr52;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 84: goto st36;
		case 116: goto st36;
	}
	goto tr52;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 69: goto st37;
		case 101: goto st37;
	}
	goto tr52;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 82: goto st38;
		case 114: goto st38;
	}
	goto tr52;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	switch( (*p) ) {
		case 9: goto st39;
		case 32: goto st39;
	}
	if ( 12 <= (*p) && (*p) <= 13 )
		goto st39;
	goto tr52;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 9: goto st39;
		case 32: goto st39;
		case 76: goto st40;
		case 108: goto st40;
	}
	if ( 12 <= (*p) && (*p) <= 13 )
		goto st39;
	goto tr52;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 79: goto st41;
		case 111: goto st41;
	}
	goto tr52;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	switch( (*p) ) {
		case 79: goto st42;
		case 111: goto st42;
	}
	goto tr52;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 80: goto st43;
		case 112: goto st43;
	}
	goto tr52;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( (*p) == 10 )
		goto st44;
	goto st43;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 32: goto tr66;
		case 86: goto tr67;
		case 118: goto tr67;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr66;
	goto tr65;
tr66:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 849 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 10: goto tr66;
		case 32: goto st45;
		case 86: goto st46;
		case 118: goto st46;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st45;
	goto tr68;
tr67:
#line 81 "STLAsciiParseRagel.rl"
	{ ++lineNum_; /* Count '\n' occurrences */ }
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 867 "STLAsciiParseRagel.cc"
	switch( (*p) ) {
		case 69: goto st47;
		case 101: goto st47;
	}
	goto tr68;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	switch( (*p) ) {
		case 82: goto st48;
		case 114: goto st48;
	}
	goto tr68;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 84: goto st49;
		case 116: goto st49;
	}
	goto tr68;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	switch( (*p) ) {
		case 69: goto st50;
		case 101: goto st50;
	}
	goto tr68;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	switch( (*p) ) {
		case 88: goto st51;
		case 120: goto st51;
	}
	goto tr68;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 9: goto st52;
		case 32: goto st52;
	}
	if ( 12 <= (*p) && (*p) <= 13 )
		goto st52;
	goto tr68;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	switch( (*p) ) {
		case 9: goto st52;
		case 32: goto st52;
		case 43: goto tr77;
		case 45: goto tr77;
		case 46: goto tr78;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr79;
	} else if ( (*p) >= 12 )
		goto st52;
	goto tr68;
tr77:
#line 82 "STLAsciiParseRagel.rl"
	{ tok = p; /* Local token start */ }
	goto st53;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
#line 945 "STLAsciiParseRagel.cc"
	if ( (*p) == 46 )
		goto st54;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st163;
	goto tr68;
tr78:
#line 82 "STLAsciiParseRagel.rl"
	{ tok = p; /* Local token start */ }
	goto st54;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
#line 959 "STLAsciiParseRagel.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st55;
	goto tr68;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	switch( (*p) ) {
		case 9: goto tr83;
		case 32: goto tr83;
		case 69: goto st160;
		case 101: goto st160;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st55;
	} else if ( (*p) >= 12 )
		goto tr83;
	goto tr68;
tr83:
#line 90 "STLAsciiParseRagel.rl"
	{
        const char saveC = *p;
        *p = '\0';  // Make nul-terminated
